[package]
name = "accord"
authors = ["Blooym"]
description = "Discord bot for providing multi-server multi-starboard functionality."
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive", "env"] }
dotenvy = "0.15.7"
emojis = "0.7.2"
linkify = "0.10.0"
poise = "0.6.1"
serenity = { version = "0.12.4", features = ["temp_cache"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.47.1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"

[profile.release]
lto = true
codegen-units = 1
